Replace deprecated boxed-type constructors with valueOf() in value-comparison tests.